# app/Http/Requests/VerifyIdentityRequest.php
@@ -1,0 +1,21 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class VerifyIdentityRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    public function rules(): array
+    {
+        return [
+            'nik' => ['required', 'digits:16'],
+            'birth_date' => ['required', 'date'],
+        ];
+    }
+}
